Properly apply and remap imports in release builds